// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`history records extractProviderModels extracts all provider-model combinations 1`] = `
{
  "anthropic": {
    "models": {
      "claude-3-5-sonnet": {
        "firstSeen": 1775241368188,
        "lastSeen": 1775241368188,
        "modelId": "claude-3-5-sonnet",
        "providerId": "anthropic",
        "status": "active",
      },
      "claude-4-opus": {
        "firstSeen": 1775241368188,
        "lastSeen": 1775241368188,
        "modelId": "claude-4-opus",
        "providerId": "anthropic",
        "status": "active",
      },
    },
  },
  "openai": {
    "models": {
      "gpt-4-turbo": {
        "firstSeen": 1775241368188,
        "lastSeen": 1775241368188,
        "modelId": "gpt-4-turbo",
        "providerId": "openai",
        "status": "active",
      },
    },
  },
}
`;

exports[`history records extractProviderModels handles empty models 1`] = `
{
  "empty-provider": {
    "models": {},
  },
}
`;

exports[`history records updateHistoryRecords creates new history from empty 1`] = `
{
  "anthropic": {
    "models": {
      "claude-3-5": {
        "firstSeen": 1775241368189,
        "lastSeen": 1775241368189,
        "modelId": "claude-3-5",
        "providerId": "anthropic",
        "status": "active",
      },
    },
  },
}
`;

exports[`history records updateHistoryRecords marks removed models as removed 1`] = `
{
  "anthropic": {
    "models": {
      "claude-3-5": {
        "firstSeen": 1000,
        "lastSeen": 1775241368189,
        "modelId": "claude-3-5",
        "providerId": "anthropic",
        "status": "active",
      },
    },
  },
  "openai": {
    "models": {
      "gpt-4": {
        "firstSeen": 1500,
        "lastSeen": 2500,
        "modelId": "gpt-4",
        "providerId": "openai",
        "status": "removed",
      },
    },
  },
}
`;

exports[`history records updateHistoryRecords re-activates previously removed model 1`] = `
{
  "anthropic": {
    "models": {
      "claude-3-5": {
        "firstSeen": 1000,
        "lastSeen": 1775241368189,
        "modelId": "claude-3-5",
        "providerId": "anthropic",
        "status": "active",
      },
    },
  },
}
`;

exports[`history records updateHistoryRecords preserves firstSeen across updates 1`] = `
{
  "test": {
    "models": {
      "model-a": {
        "firstSeen": 1000,
        "lastSeen": 1775241368189,
        "modelId": "model-a",
        "providerId": "test",
        "status": "active",
      },
    },
  },
}
`;
